Update langchain API

--- a/retrieval_augmented_generation/retrieval_augmented_generation.ipynb
+++ b/retrieval_augmented_generation/retrieval_augmented_generation.ipynb
@@ -366,9 +366,8 @@
    "outputs": [],
    "source": [
     "# use KDBAI as vector store\n",
-    "vecdb_kdbai = KDBAI.from_texts(\n",
-    "    session, \"rag_langchain\", texts=pages, embedding=embeddings\n",
-    ")"
+    "vecdb_kdbai = KDBAI(table, embeddings)\n",
+    "vecdb_kdbai.add_texts(texts=pages)"
    ]
   },
   {
@@ -420,8 +419,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Document(page_content='We are the only nation on Earth that has always turned every crisis we have faced into an opportunity. \\n\\nThe only nation that can be defined by a single word: possibilities. \\n\\nSo on this night, in our 245th year as a nation, I have come to report on the State of the Union. \\n\\nAnd my report is this: the State of the Union is strong—because you, the American people, are strong. \\n\\nWe are stronger today than we were a year ago. \\n\\nAnd we will be stronger a year from now than we are today.', metadata={'id': '958497bd-21f0-4d51-8934-68a6469a3d65', 'embeddings': array([-2.1954027e-03, -1.8670579e-02,  4.0691000e-05, ...,\n",
-      "       -9.3835755e-04,  7.5132987e-03, -2.0782286e-02], dtype=float32)})]\n"
+      "[Document(page_content='We are the only nation on Earth that has always turned every crisis we have faced into an opportunity. \\n\\nThe only nation that can be defined by a single word: possibilities. \\n\\nSo on this night, in our 245th year as a nation, I have come to report on the State of the Union. \\n\\nAnd my report is this: the State of the Union is strong—because you, the American people, are strong. \\n\\nWe are stronger today than we were a year ago. \\n\\nAnd we will be stronger a year from now than we are today.', metadata={'id': 'e19475e6-e0df-4bbb-95e6-388956795a38', 'embeddings': array([-0.00213418, -0.01874734,  0.0001179 , ..., -0.00102042,\n",
+      "         0.00753241, -0.02074311], dtype=float32)})]"
      ]
     }
    ],
@@ -508,8 +507,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Document(page_content='We are the only nation on Earth that has always turned every crisis we have faced into an opportunity. \\n\\nThe only nation that can be defined by a single word: possibilities. \\n\\nSo on this night, in our 245th year as a nation, I have come to report on the State of the Union. \\n\\nAnd my report is this: the State of the Union is strong—because you, the American people, are strong. \\n\\nWe are stronger today than we were a year ago. \\n\\nAnd we will be stronger a year from now than we are today.', metadata={'id': '958497bd-21f0-4d51-8934-68a6469a3d65', 'embeddings': array([-2.1954027e-03, -1.8670579e-02,  4.0691000e-05, ...,\n",
-      "       -9.3835755e-04,  7.5132987e-03, -2.0782286e-02], dtype=float32)})]\n"
+      "[Document(page_content='We are the only nation on Earth that has always turned every crisis we have faced into an opportunity. \\n\\nThe only nation that can be defined by a single word: possibilities. \\n\\nSo on this night, in our 245th year as a nation, I have come to report on the State of the Union. \\n\\nAnd my report is this: the State of the Union is strong—because you, the American people, are strong. \\n\\nWe are stronger today than we were a year ago. \\n\\nAnd we will be stronger a year from now than we are today.', metadata={'id': 'e19475e6-e0df-4bbb-95e6-388956795a38', 'embeddings': array([-0.00213418, -0.01874734,  0.0001179 , ..., -0.00102042,\n",
+      "         0.00753241, -0.02074311], dtype=float32)})]"
      ]
     }
    ],
@@ -528,7 +527,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " The American people are strong and capable of turning any crisis into an opportunity. \n"
+      "' The American people are strong. The nation is capable of turning crises into opportunities and is filled with possibilities.'"
      ]
     }
    ],
@@ -547,7 +546,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "possibilities\n"
+      "'We are strong today than we were a year ago. And we will be stronger a year'"
      ]
     }
    ],
@@ -621,22 +620,7 @@
      "text": [
       "what are the nations strengths?\n",
       "-----\n",
-      "The passage mentions several strengths of the United States:\n",
-      "\n",
-      "1. Resilience and ability to turn crises into opportunities.\n",
-      "2. Strong and united American people.\n",
-      "3. History of debating and addressing great questions and achieving great things.\n",
-      "4. Commitment to freedom, liberty, and democracy.\n",
-      "5. Strong military capabilities and commitment to defending NATO allies.\n",
-      "6. Mobilization of ground forces, air squadrons, and ship deployments to protect NATO countries.\n",
-      "7. Leadership in releasing petroleum reserves to stabilize gas prices.\n",
-      "8. Confidence in overcoming challenges and capacity to succeed.\n",
-      "9. Support for democracy and peace, with democracies rising to the occasion.\n",
-      "10. Diplomatic influence and resolve.\n",
-      "11. Preparedness and coordination with allies in responding to threats.\n",
-      "12. Imposing economic sanctions on Russia and isolating Putin from the world.\n",
-      "13. Unity and determination of the Ukrainian people in the face of aggression.\n",
-      "14. Support from fellow Ukrainian Americans and deep bonds between the two nations.\n"
+      "The passage does not explicitly mention the specific strengths of the United States. However, it emphasizes the resilience and strength of the American people, their ability to turn crises into opportunities, and their commitment to protecting freedom, expanding liberty, and defending democracy. It also highlights the nation's history of debating important issues, fighting for freedom, and building a strong and prosperous nation. Additionally, it mentions the mobilization of American forces to defend NATO allies and the implementation of economic sanctions to support Ukraine.\n"
      ]
     }
    ],
@@ -679,18 +663,7 @@
      "text": [
       "what are the things this country needs to protect?\n",
       "-----\n",
-      "Based on the provided context, the country needs to protect the following:\n",
-      "\n",
-      "1. The right to vote and ensure that every vote is counted.\n",
-      "2. The torch of liberty and the values that have attracted generations of immigrants to the United States.\n",
-      "3. The pathway to citizenship for Dreamers, temporary status holders, farm workers, and essential workers.\n",
-      "4. The border security by implementing new technology, joint patrols, and dedicated immigration judges.\n",
-      "5. American industries and jobs by buying American products and leveling the playing field with competitors like China.\n",
-      "6. Communities by investing in crime prevention, community police officers, and holding law enforcement accountable.\n",
-      "7. Access to healthcare, including preserving a woman's right to choose and advancing maternal health care.\n",
-      "8. LGBTQ+ rights by passing the bipartisan Equality Act.\n",
-      "9. Democracy by protecting it from threats and ensuring fairness and opportunity for all.\n",
-      "10. American jobs and businesses by using taxpayer dollars to support American products and industries.\n"
+      "\"Based on the provided context, the country needs to protect the following:\\n\\n1. The right to vote and ensure that every vote is counted.\\n2. The torch of liberty that has led generations of immigrants to the United States.\\n3. The pathway to citizenship for Dreamers, temporary status holders, farm workers, and essential workers.\\n4. The border security by implementing new technology, joint patrols, and dedicated immigration judges.\\n5. American industries and jobs by buying American-made products and leveling the playing field with competitors like China.\\n6. Communities by investing in crime prevention, community police officers, and holding law enforcement accountable.\\n7. Access to healthcare, including preserving a woman's right to choose and advancing maternal health care.\\n8. LGBTQ+ rights by passing the bipartisan Equality Act.\\n9. Democracy by protecting it from threats and ensuring fairness and opportunity for all.\\n10. American jobs and businesses by using taxpayer dollars to support American products and industries.\""
      ]
     }
    ],
