--- a/document_search/document_search.ipynb
+++ b/document_search/document_search.ipynb
@@ -57,7 +57,7 @@
    "outputs": [],
    "source": [
     "### ignore tensorflow warnings\n",
-    "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3'"
+    "os.environ[\"TF_CPP_MIN_LOG_LEVEL\"] = \"3\""
    ]
   },
   {
