--- a/image_search/image_search.ipynb
+++ b/image_search/image_search.ipynb
@@ -60,7 +60,7 @@
    "outputs": [],
    "source": [
     "### ignore tensorflow warnings\n",
-    "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3'"
+    "os.environ[\"TF_CPP_MIN_LOG_LEVEL\"] = \"3\""
    ]
   },
   {
