--- a/sentiment_analysis/sentiment_analysis.ipynb
+++ b/sentiment_analysis/sentiment_analysis.ipynb
@@ -63,7 +63,7 @@
    "outputs": [],
    "source": [
     "# ignore tensorflow warnings\n",
-    "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3'"
+    "os.environ[\"TF_CPP_MIN_LOG_LEVEL\"] = \"3\""
    ]
   },
   {
