add server connection all

--- a/document_search/document_search.ipynb
+++ b/document_search/document_search.ipynb
@@ -443,11 +443,18 @@
    "source": [
     "With the embeddings created, we need to store them in a vector database to enable efficient searching. KDB.AI is perfect for this task.\n",
     "\n",
-    "### Connect to KDB.AI Session\n",
+    "KDB.AI comes in two offerings:\n",
     "\n",
-    "To use KDB.AI, you will need two session details - a URL endpoint and an API key. To get these you can sign up for free [here](https://trykdb.kx.com/kdbai/signup).\n",
+    "1. [KDB.AI Cloud](https://trykdb.kx.com/kdbai/signup/) - For experimenting with smaller generative AI projects with a vector database in our cloud.\n",
+    "2. [KDB.AI Server](https://trykdb.kx.com/kdbaiserver/signup/) - For evaluating large scale generative AI applications on-premises or on your own cloud provider.\n",
     "\n",
-    "You can connect to a KDB.AI session using `kdbai.Session` and passing the session URL endpoint and API key details from your KDB.AI Cloud portal.\n",
+    "Depending on which you use there will be different setup steps and connection details required.\n",
+    "\n",
+    "### KDB.AI Cloud\n",
+    "\n",
+    "To use KDB.AI Cloud, you will need two session details - a URL endpoint and an API key. To get these you can sign up for free [here](https://trykdb.kx.com/kdbai/signup).\n",
+    "\n",
+    "You can connect to a KDB.AI Cloud session using `kdbai.Session` and passing the session URL endpoint and API key details from your KDB.AI Cloud portal.\n",
     "\n",
     "If the environment variables `KDBAI_ENDPOINTS` and `KDBAI_API_KEY` exist on your system containing your KDB.AI Cloud portal details, these variables will automatically be used to connect.\n",
     "If these do not exist, it will prompt you to enter your KDB.AI Cloud portal session URL endpoint and API key details."
@@ -480,6 +487,30 @@
    "outputs": [],
    "source": [
     "session = kdbai.Session(api_key=KDBAI_API_KEY, endpoint=KDBAI_ENDPOINT)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b53a7384",
+   "metadata": {},
+   "source": [
+    "### KDB.AI Server\n",
+    "\n",
+    "To use KDB.AI Server, you will need download and run your own container. To do this you will first need to sign up for free [here](https://trykdb.kx.com/kdbaiserver/signup/). \n",
+    "\n",
+    "You will receive an email with the required license file and bearer token needed to download your instance. Follow instructions in the signup email to get your session up and running.\n",
+    "\n",
+    "Once the [setup steps](https://code.kx.com/kdbai/gettingStarted/kdb-ai-server-setup.html) are complete you can then connect to your KDB.AI Server session using `kdbai.Session` and passing your local endpoint."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f48fc536",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "session = kdbai.Session(endpoint='http://localhost:8082')"
    ]
   },
   {
