Upgrade 0.1.2 and add survey links

--- a/image_search/image_search.ipynb
+++ b/image_search/image_search.ipynb
@@ -1892,6 +1892,16 @@
    "source": [
     "table.drop()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec247cae",
+   "metadata": {},
+   "source": [
+    "We hope you found this sample helpful! Your feedback is important to us, and we would appreciate it if you could take a moment to fill out our brief survey. Your input helps us improve our content.\n",
+    "\n",
+    "[**Take the Survey**](https://delighted.com/t/pmv533GL)"
+   ]
   }
  ],
  "metadata": {
