--- a/document_search/document_search.ipynb
+++ b/document_search/document_search.ipynb
@@ -1052,6 +1052,16 @@
    "source": [
     "table.drop()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "346d56db",
+   "metadata": {},
+   "source": [
+    "We hope you found this sample helpful! Your feedback is important to us, and we would appreciate it if you could take a moment to fill out our brief survey. Your input helps us improve our content.\n",
+    "\n",
+    "[**Take the Survey**](https://delighted.com/t/ezUwZ88a)"
+   ]
   }
  ],
  "metadata": {
