--- a/music_recommendation/music_recommendation.ipynb
+++ b/music_recommendation/music_recommendation.ipynb
@@ -2732,6 +2732,16 @@
    "source": [
     "table.drop()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96a12b1f",
+   "metadata": {},
+   "source": [
+    "We hope you found this sample helpful! Your feedback is important to us, and we would appreciate it if you could take a moment to fill out our brief survey. Your input helps us improve our content.\n",
+    "\n",
+    "[**Take the Survey**](https://delighted.com/t/gvqeAOuO)"
+   ]
   }
  ],
  "metadata": {
