--- a/pattern_matching/pattern_matching.ipynb
+++ b/pattern_matching/pattern_matching.ipynb
@@ -1821,6 +1821,16 @@
    "source": [
     "table.drop()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6078c94e",
+   "metadata": {},
+   "source": [
+    "We hope you found this sample helpful! Your feedback is important to us, and we would appreciate it if you could take a moment to fill out our brief survey. Your input helps us improve our content.\n",
+    "\n",
+    "[**Take the Survey**](https://delighted.com/t/go0ElNsJ)"
+   ]
   }
  ],
  "metadata": {
