install commands and typos

--- a/pattern_matching/pattern_matching.ipynb
+++ b/pattern_matching/pattern_matching.ipynb
@@ -31,7 +31,21 @@
    "id": "f232d6de-c110-460a-a69f-e8cf852355b6",
    "metadata": {},
    "source": [
-    "## 0. Setup"
+    "## 0. Setup\n",
+    "\n",
+    "### Install dependencies \n",
+    "\n",
+    "To run this notebook, you will need to ensure you have installed the required dependencies provided in `requirements.txt`. Refer to the [README](https://github.com/KxSystems/kdbai-samples/blob/main/README.md#install-python-packages) for instructions on using `pip install` to set up the necessary environment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50feff8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pip install -r requirements.txt"
    ]
   },
   {
@@ -186,7 +200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_sensors_df = pd.read_csv(\"data/sensor.csv\")"
+    "raw_sensors_df = pd.read_csv(\"data/archive/sensor.csv\")"
    ]
   },
   {
