--- a/document_search/document_search.ipynb
+++ b/document_search/document_search.ipynb
@@ -28,7 +28,21 @@
    "id": "75362bc9",
    "metadata": {},
    "source": [
-    "## 0. Setup"
+    "## 0. Setup\n",
+    "\n",
+    "### Install dependencies \n",
+    "\n",
+    "To run this notebook, you will need to ensure you have installed the required dependencies provided in `requirements.txt`. Refer to the [README](https://github.com/KxSystems/kdbai-samples/blob/main/README.md#install-python-packages) for instructions on using `pip install` to set up the necessary environment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d96dac6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pip install -r requirements.txt"
    ]
   },
   {
