--- a/image_search/image_search.ipynb
+++ b/image_search/image_search.ipynb
@@ -31,7 +31,21 @@
    "id": "e85732f3-4549-4d41-888f-5c9ff40f7f81",
    "metadata": {},
    "source": [
-    "## 0. Setup"
+    "## 0. Setup\n",
+    "\n",
+    "### Install dependencies \n",
+    "\n",
+    "To run this notebook, you will need to ensure you have installed the required dependencies provided in `requirements.txt`. Refer to the [README](https://github.com/KxSystems/kdbai-samples/blob/main/README.md#install-python-packages) for instructions on using `pip install` to set up the necessary environment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c938b9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pip install -r requirements.txt"
    ]
   },
   {
@@ -222,7 +236,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def extact_file_paths_from_folder(parent_dir: str) -> dict:\n",
+    "def extract_file_paths_from_folder(parent_dir: str) -> dict:\n",
     "    image_paths = {}\n",
     "    for sub_folder in os.listdir(parent_dir):\n",
     "        sub_dir = os.path.join(parent_dir, sub_folder)\n",
@@ -239,7 +253,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image_paths_map = extact_file_paths_from_folder(\"data\")"
+    "image_paths_map = extract_file_paths_from_folder(\"data\")"
    ]
   },
   {
