--- a/music_recommendation/music_recommendation.ipynb
+++ b/music_recommendation/music_recommendation.ipynb
@@ -31,7 +31,21 @@
    "id": "5a3605c7",
    "metadata": {},
    "source": [
-    "## 0. Setup"
+    "## 0. Setup\n",
+    "\n",
+    "### Install dependencies \n",
+    "\n",
+    "To run this notebook, you will need to ensure you have installed the required dependencies provided in `requirements.txt`. Refer to the [README](https://github.com/KxSystems/kdbai-samples/blob/main/README.md#install-python-packages) for instructions on using `pip install` to set up the necessary environment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e6131e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pip install -r requirements.txt"
    ]
   },
   {
