--- a/quickstarts/python_quickstart.ipynb
+++ b/quickstarts/python_quickstart.ipynb
@@ -24,7 +24,21 @@
    "id": "260d0f4b-ef09-4bd2-a197-a9351be24684",
    "metadata": {},
    "source": [
-    "## 0. Setup"
+    "## 0. Setup\n",
+    "\n",
+    "### Install dependencies \n",
+    "\n",
+    "To run this notebook, you will need to ensure you have installed the required dependencies provided in `requirements.txt`. Refer to the [README](https://github.com/KxSystems/kdbai-samples/blob/main/README.md#install-python-packages) for instructions on using `pip install` to set up the necessary environment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "180605ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pip install -r requirements.txt"
    ]
   },
   {
