--- a/sentiment_analysis/sentiment_analysis.ipynb
+++ b/sentiment_analysis/sentiment_analysis.ipynb
@@ -34,21 +34,19 @@
    "id": "6a10030c",
    "metadata": {},
    "source": [
-    "## 0. Setup\n",
-    "\n",
-    "### Install dependencies \n",
-    "\n",
-    "To run this notebook, you will need to ensure you have installed the required dependencies provided in `requirements.txt`. Refer to the [README](https://github.com/KxSystems/kdbai-samples/blob/main/README.md#install-python-packages) for instructions on using `pip install` to set up the necessary environment."
+    "## 0. Setup"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "13aa332a",
+   "cell_type": "markdown",
+   "id": "91255bcd",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#pip install -r requirements.txt"
+    "### Install dependencies \n",
+    "\n",
+    "In order to successfully run this sample, the [Setup](https://github.com/KxSystems/kdbai-samples/blob/main/README.md#setup) steps in the repository's `README.md` file must be completed.\n",
+    "This will ensure that you have installed all of the relevant packages and versions needed for this sample.\n",
+    "If you have not completed these setup steps, please navigate to the repositories `README.md` file and follow the steps detailed there."
    ]
   },
   {
