--- a/retrieval_augmented_generation/retrieval_augmented_generation_evaluation.ipynb
+++ b/retrieval_augmented_generation/retrieval_augmented_generation_evaluation.ipynb
@@ -23,21 +23,19 @@
    "id": "0ccfea1b-e0ec-425e-aab8-48726b6cf96e",
    "metadata": {},
    "source": [
-    "## 0. Setup\n",
-    "\n",
-    "### Install packages \n",
-    "\n",
-    "Before running this notebook, ensure you have installed the required dependencies provided in the `requirements.txt`. Refer to the [README](https://github.com/KxSystems/kdbai-samples/blob/main/README.md#install-python-packages) for instructions on using `pip install` to set up the necessary environment."
+    "## 0. Setup"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9b1651bf-3d05-41b7-8eb5-3a3546d8723a",
+   "cell_type": "markdown",
+   "id": "54afde0e",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#pip install -r requirements.txt"
+    "### Install packages \n",
+    "\n",
+    "In order to successfully run this sample, the [Setup](https://github.com/KxSystems/kdbai-samples/blob/main/README.md#setup) steps in the repository's `README.md` file must be completed.\n",
+    "This will ensure that you have installed all of the relevant packages and versions needed for this sample.\n",
+    "If you have not completed these setup steps, please navigate to the repositories `README.md` file and follow the steps detailed there"
    ]
   },
   {
@@ -416,7 +414,7 @@
    "source": [
     "## 2. Calculate Conciseness\n",
     "\n",
-    "Let's measure the conciseness of this answer the QA bot returns using LangChain's `load_evaluator` function with the `criteria` set to concisesness. In this example we use GPT-4 as the LLM that performs the evaluation."
+    "Let's measure the conciseness of this answer the QA bot returns using LangChain's `load_evaluator` function with the `criteria` set to conciseness. In this example we use GPT-4 as the LLM that performs the evaluation."
    ]
   },
   {
@@ -477,7 +475,7 @@
    "id": "ed8e4e74-876c-4dae-9e0d-42f20698ea43",
    "metadata": {},
    "source": [
-    "### 3. Calculate Correctness\n",
+    "## 3. Calculate Correctness\n",
     "\n",
     "We can use the same `load_evaluator` function to calculate correctness simply changing the `criteria` to correctness.\n",
     "\n",
