Remove accidental addition

--- a/pattern_matching/pattern_matching.ipynb
+++ b/pattern_matching/pattern_matching.ipynb
@@ -198,7 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_sensors_df = pd.read_csv(\"data/archive/sensor.csv\")"
+    "raw_sensors_df = pd.read_csv(\"data/sensor.csv\")"
    ]
   },
   {
