Update session creation format

--- a/quickstarts/python_quickstart.ipynb
+++ b/quickstarts/python_quickstart.ipynb
@@ -85,22 +85,19 @@
    "id": "d3a3aa22",
    "metadata": {},
    "source": [
+    "### Define KDB.AI Session\n",
+    "\n",
     "KDB.AI comes in two offerings:\n",
     "\n",
     "1. [KDB.AI Cloud](https://trykdb.kx.com/kdbai/signup/) - For experimenting with smaller generative AI projects with a vector database in our cloud.\n",
     "2. [KDB.AI Server](https://trykdb.kx.com/kdbaiserver/signup/) - For evaluating large scale generative AI applications on-premises or on your own cloud provider.\n",
     "\n",
-    "Depending on which you use there will be different setup steps and connection details required."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1b0ab606",
-   "metadata": {},
-   "source": [
-    "### KDB.AI Cloud\n",
+    "Depending on which you use there will be different setup steps and connection details required.\n",
     "\n",
-    "To use KDB.AI Cloud, you will need two session details - a URL endpoint and an API key. To get these you can sign up for free [here](https://trykdb.kx.com/kdbai/signup).\n",
+    "##### Option 1. KDB.AI Cloud\n",
+    "\n",
+    "To use KDB.AI Cloud, you will need two session details - a URL endpoint and an API key.\n",
+    "To get these you can sign up for free [here](https://trykdb.kx.com/kdbai/signup).\n",
     "\n",
     "You can connect to a KDB.AI Cloud session using `kdbai.Session` and passing the session URL endpoint and API key details from your KDB.AI Cloud portal.\n",
     "\n",
@@ -142,11 +139,13 @@
    "id": "86f16226",
    "metadata": {},
    "source": [
-    "### KDB.AI Server\n",
+    "##### Option 2. KDB.AI Server\n",
     "\n",
-    "To use KDB.AI Server, you will need download and run your own container. To do this you will first need to sign up for free [here](https://trykdb.kx.com/kdbaiserver/signup/). \n",
+    "To use KDB.AI Server, you will need download and run your own container.\n",
+    "To do this, you will first need to sign up for free [here](https://trykdb.kx.com/kdbaiserver/signup/). \n",
     "\n",
-    "You will receive an email with the required license file and bearer token needed to download your instance. Follow instructions in the signup email to get your session up and running.\n",
+    "You will receive an email with the required license file and bearer token needed to download your instance.\n",
+    "Follow instructions in the signup email to get your session up and running.\n",
     "\n",
     "Once the [setup steps](https://code.kx.com/kdbai/gettingStarted/kdb-ai-server-setup.html) are complete you can then connect to your KDB.AI Server session using `kdbai.Session` and passing your local endpoint."
    ]
@@ -158,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "session = kdbai.Session(endpoint='http://localhost:8082')"
+    "# session = kdbai.Session(endpoint=\"http://localhost:8082\")"
    ]
   },
   {
@@ -187,6 +186,8 @@
    "id": "8788a6b1",
    "metadata": {},
    "source": [
+    "### Verify Defined Tables\n",
+    "\n",
     "We can check our connection using the `session.list()` function.\n",
     "This will return a list of all the tables we have defined in our vector database thus far.\n",
     "This should return an empty list."
