--- a/retrieval_augmented_generation/retrieval_augmented_generation.ipynb
+++ b/retrieval_augmented_generation/retrieval_augmented_generation.ipynb
@@ -253,7 +253,9 @@
    "id": "f0f6d6e2",
    "metadata": {},
    "source": [
-    "With the embeddings created, we need to store them in a vector database to enable efficient searching. KDB.AI is perfect for this task.\n",
+    "With the embeddings created, we need to store them in a vector database to enable efficient searching.\n",
+    "\n",
+    "### Define KDB.AI Session\n",
     "\n",
     "KDB.AI comes in two offerings:\n",
     "\n",
@@ -262,9 +264,10 @@
     "\n",
     "Depending on which you use there will be different setup steps and connection details required.\n",
     "\n",
-    "### KDB.AI Cloud\n",
+    "##### Option 1. KDB.AI Cloud\n",
     "\n",
-    "To use KDB.AI Cloud, you will need two session details - a URL endpoint and an API key. To get these you can sign up for free [here](https://trykdb.kx.com/kdbai/signup).\n",
+    "To use KDB.AI Cloud, you will need two session details - a URL endpoint and an API key.\n",
+    "To get these you can sign up for free [here](https://trykdb.kx.com/kdbai/signup).\n",
     "\n",
     "You can connect to a KDB.AI Cloud session using `kdbai.Session` and passing the session URL endpoint and API key details from your KDB.AI Cloud portal.\n",
     "\n",
@@ -306,11 +309,13 @@
    "id": "b17cfdc8",
    "metadata": {},
    "source": [
-    "### KDB.AI Server\n",
+    "##### Option 2. KDB.AI Server\n",
     "\n",
-    "To use KDB.AI Server, you will need download and run your own container. To do this you will first need to sign up for free [here](https://trykdb.kx.com/kdbaiserver/signup/). \n",
+    "To use KDB.AI Server, you will need download and run your own container.\n",
+    "To do this, you will first need to sign up for free [here](https://trykdb.kx.com/kdbaiserver/signup/). \n",
     "\n",
-    "You will receive an email with the required license file and bearer token needed to download your instance. Follow instructions in the signup email to get your session up and running.\n",
+    "You will receive an email with the required license file and bearer token needed to download your instance.\n",
+    "Follow instructions in the signup email to get your session up and running.\n",
     "\n",
     "Once the [setup steps](https://code.kx.com/kdbai/gettingStarted/kdb-ai-server-setup.html) are complete you can then connect to your KDB.AI Server session using `kdbai.Session` and passing your local endpoint."
    ]
@@ -322,7 +327,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "session = kdbai.Session(endpoint='http://localhost:8082')"
+    "# session = kdbai.Session(endpoint=\"http://localhost:8082\")"
    ]
   },
   {
