Add survey heading

--- a/document_search/document_search.ipynb
+++ b/document_search/document_search.ipynb
@@ -1075,6 +1075,8 @@
    "id": "346d56db",
    "metadata": {},
    "source": [
+    "## Take Our Survey\n",
+    "\n",
     "We hope you found this sample helpful! Your feedback is important to us, and we would appreciate it if you could take a moment to fill out our brief survey. Your input helps us improve our content.\n",
     "\n",
     "[**Take the Survey**](https://delighted.com/t/ezUwZ88a)"
