--- a/image_search/image_search.ipynb
+++ b/image_search/image_search.ipynb
@@ -1915,6 +1915,8 @@
    "id": "ec247cae",
    "metadata": {},
    "source": [
+    "## Take Our Survey\n",
+    "\n",
     "We hope you found this sample helpful! Your feedback is important to us, and we would appreciate it if you could take a moment to fill out our brief survey. Your input helps us improve our content.\n",
     "\n",
     "[**Take the Survey**](https://delighted.com/t/pmv533GL)"
