--- a/pattern_matching/pattern_matching.ipynb
+++ b/pattern_matching/pattern_matching.ipynb
@@ -1850,6 +1850,8 @@
    "id": "6078c94e",
    "metadata": {},
    "source": [
+    "## Take Our Survey\n",
+    "\n",
     "We hope you found this sample helpful! Your feedback is important to us, and we would appreciate it if you could take a moment to fill out our brief survey. Your input helps us improve our content.\n",
     "\n",
     "[**Take the Survey**](https://delighted.com/t/go0ElNsJ)"
