--- a/retrieval_augmented_generation/retrieval_augmented_generation.ipynb
+++ b/retrieval_augmented_generation/retrieval_augmented_generation.ipynb
@@ -768,6 +768,8 @@
    "id": "2e8a102d",
    "metadata": {},
    "source": [
+    "## Take Our Survey\n",
+    "\n",
     "We hope you found this sample helpful! Your feedback is important to us, and we would appreciate it if you could take a moment to fill out our brief survey. Your input helps us improve our content.\n",
     "\n",
     "[**Take the Survey**](https://delighted.com/t/dgCLUkdx)"
