--- a/sentiment_analysis/sentiment_analysis.ipynb
+++ b/sentiment_analysis/sentiment_analysis.ipynb
@@ -2174,6 +2174,8 @@
    "id": "e3c80cb4",
    "metadata": {},
    "source": [
+    "## Take Our Survey\n",
+    "\n",
     "We hope you found this sample helpful! Your feedback is important to us, and we would appreciate it if you could take a moment to fill out our brief survey. Your input helps us improve our content.\n",
     "\n",
     "[**Take the Survey**](https://delighted.com/t/LSHwNfQO)"
