Re-run cells to fix outputs

--- a/retrieval_augmented_generation/retrieval_augmented_generation_evaluation.ipynb
+++ b/retrieval_augmented_generation/retrieval_augmented_generation_evaluation.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "894980f2",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b9549fe3",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5ab423cd",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ed70fbe3",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b03039cb",
    "metadata": {},
    "outputs": [],
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "69dfbffd",
    "metadata": {},
    "outputs": [],
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "84bfd8a4",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e9c70879",
    "metadata": {},
    "outputs": [],
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "ffa379e4",
    "metadata": {},
    "outputs": [],
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "e62f00a8",
    "metadata": {},
    "outputs": [],
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "ecf10fd6",
    "metadata": {},
    "outputs": [],
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "a62fd9f3",
    "metadata": {},
    "outputs": [],
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "299902d3",
    "metadata": {},
    "outputs": [],
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "0bbc9942",
    "metadata": {},
    "outputs": [],
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "37840395",
    "metadata": {},
    "outputs": [],
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "7680e758",
    "metadata": {},
    "outputs": [],
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "9011f654",
    "metadata": {},
    "outputs": [],
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "3ca7342e",
    "metadata": {},
    "outputs": [],
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "de98d6be",
    "metadata": {},
    "outputs": [],
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "85ca7b27",
    "metadata": {},
    "outputs": [],
@@ -509,10 +509,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "fd88bf8e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What improvements could be made in infrastructure?\n",
+      "-----\n",
+      "Some improvements that could be made in infrastructure include:\n",
+      "\n",
+      "1. Rebuilding and repairing highways and bridges that are in disrepair.\n",
+      "2. Building a national network of 500,000 electric vehicle charging stations.\n",
+      "3. Replacing poisonous lead pipes to ensure clean water for every American.\n",
+      "4. Providing affordable high-speed internet access for all Americans, including urban, suburban, rural, and tribal communities.\n",
+      "5. Modernizing airports, ports, and waterways.\n",
+      "6. Investing in renewable energy production, such as solar and wind, to double America's clean energy production.\n",
+      "7. Lowering the cost of electric vehicles and promoting their use.\n",
+      "8. Weatherizing homes and businesses to improve energy efficiency.\n",
+      "9. Investing in emerging technologies and American manufacturing to compete with global competitors like China.\n",
+      "10. Ensuring that infrastructure projects are made in America, supporting domestic manufacturing and supply chains.\n"
+     ]
+    }
+   ],
    "source": [
     "res1 = query_qabot(qabot, query1)"
    ]
@@ -527,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "d0eece5c",
    "metadata": {},
    "outputs": [],
@@ -537,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "id": "41997198",
    "metadata": {},
    "outputs": [
@@ -586,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "9c14a699",
    "metadata": {},
    "outputs": [],
@@ -596,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "d41ed25a",
    "metadata": {},
    "outputs": [],
@@ -608,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "0a63b03e",
    "metadata": {},
    "outputs": [],
@@ -618,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "id": "a7866960-9256-4df2-8087-49dcf43c3124",
    "metadata": {},
    "outputs": [
@@ -626,31 +647,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'reasoning': 'The criterion for this task is conciseness. To evaluate the '\n",
-      "              \"submission on this basis, let's consider the following:\\n\"\n",
-      "              '\\n'\n",
-      "              '1. The submission begins with a brief introduction to the '\n",
-      "              'topic, which sets the context for the following points. It does '\n",
-      "              'not provide any unnecessary information.\\n'\n",
-      "              '\\n'\n",
-      "              '2. Each point in the list provides a clear and specific '\n",
-      "              'improvement that could be made to infrastructure. These points '\n",
-      "              'are directly related to the question and do not contain any '\n",
-      "              'extraneous details or explanations.\\n'\n",
-      "              '\\n'\n",
-      "              '3. The submission does not include any additional sentences or '\n",
-      "              'paragraphs outside of the introduced improvements. This '\n",
-      "              'suggests that the writer was focused on providing a direct '\n",
-      "              'answer to the question without adding unnecessary information.\\n'\n",
-      "              '\\n'\n",
-      "              'Based on the above reasoning, it can be concluded that the '\n",
-      "              'submission is concise and to the point. \\n'\n",
-      "              '\\n'\n",
-      "              'Therefore, the answer is:\\n'\n",
-      "              '\\n'\n",
-      "              'Y',\n",
-      " 'score': 1,\n",
-      " 'value': 'Y'}\n"
+      "\n",
+      "** reasoning **\n",
+      "---\n",
+      "The criterion for this task is conciseness. To evaluate the submission on this basis, let's consider the following:\n",
+      "1. The submission begins with a brief introduction to the topic, which sets the context for the following points. It does not provide any unnecessary information.\n",
+      "2. Each point in the list provides a clear and specific improvement that could be made to infrastructure. These points are directly related to the question and do not contain any extraneous details or explanations.\n",
+      "3. The submission does not include any additional sentences or paragraphs outside of the introduced improvements. This suggests that the writer was focused on providing a direct answer to the question without adding unnecessary information.\n",
+      "Based on the above reasoning, it can be concluded that the submission is concise and to the point. \n",
+      "Therefore, the answer is:\n",
+      "Y\n",
+      "\n",
+      "** score **\n",
+      "---\n",
+      "1\n",
+      "\n",
+      "** value **\n",
+      "---\n",
+      "Y\n"
      ]
     }
    ],
@@ -675,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "3d5742f8",
    "metadata": {},
    "outputs": [],
@@ -698,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "86e41652",
    "metadata": {},
    "outputs": [],
@@ -708,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "a2bd3f02",
    "metadata": {},
    "outputs": [],
@@ -720,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "id": "708d3386-f28d-4a6a-bb7c-10a15e8574af",
    "metadata": {},
    "outputs": [
@@ -728,29 +742,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'reasoning': 'The criterion for this assessment is correctness, accuracy, and '\n",
-      "              'factuality. We need to verify if the submitted answer is '\n",
-      "              'correct and factual based on the given input and the '\n",
-      "              'reference.\\n'\n",
-      "              '\\n'\n",
-      "              'The input asks for the number of jobs created in the country '\n",
-      "              'due to the electric vehicle manufacturing industry. \\n'\n",
-      "              '\\n'\n",
-      "              'The submission provided a detailed answer, stating that Ford '\n",
-      "              \"and GM's investments in electric vehicle manufacturing resulted \"\n",
-      "              'in a total of 15,000 jobs across the country. \\n'\n",
-      "              '\\n'\n",
-      "              'Comparing this with the reference, which states that 15,000 '\n",
-      "              'jobs were created due to the manufacturing of electric '\n",
-      "              \"vehicles, we can see that the submission's information aligns \"\n",
-      "              'with the reference, indicating it is accurate and factual. \\n'\n",
-      "              '\\n'\n",
-      "              'Therefore, the submission meets the criteria of correctness, '\n",
-      "              'accuracy, and factuality.\\n'\n",
-      "              '\\n'\n",
-      "              'Y',\n",
-      " 'score': 1,\n",
-      " 'value': 'Y'}\n"
+      "\n",
+      "** reasoning **\n",
+      "---\n",
+      "The criterion for this assessment is correctness, accuracy, and factuality. We need to verify if the submitted answer is correct and factual based on the given input and the reference.\n",
+      "The input asks for the number of jobs created in the country due to the electric vehicle manufacturing industry. \n",
+      "The submission provided a detailed answer, stating that Ford and GM's investments in electric vehicle manufacturing resulted in a total of 15,000 jobs across the country. \n",
+      "Comparing this with the reference, which states that 15,000 jobs were created due to the manufacturing of electric vehicles, we can see that the submission's information aligns with the reference, indicating it is accurate and factual. \n",
+      "Therefore, the submission meets the criteria of correctness, accuracy, and factuality.\n",
+      "Y\n",
+      "\n",
+      "** score **\n",
+      "---\n",
+      "1\n",
+      "\n",
+      "** value **\n",
+      "---\n",
+      "Y\n"
      ]
     }
    ],
@@ -768,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "a2b8c14e",
    "metadata": {},
    "outputs": [],
@@ -778,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "ea0cb2fc",
    "metadata": {},
    "outputs": [],
@@ -790,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "id": "2172b83f-61ca-4963-8225-0378580a67a8",
    "metadata": {},
    "outputs": [
@@ -798,30 +806,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'reasoning': 'The criterion to assess is the correctness, accuracy, and '\n",
-      "              'factualness of the submission.\\n'\n",
-      "              '\\n'\n",
-      "              '1. Correctness: The submission provides details about the '\n",
-      "              'number of jobs created due to the investment in electric '\n",
-      "              'vehicle manufacturing by Ford and GM. These details align with '\n",
-      "              'the input question.\\n'\n",
-      "              '\\n'\n",
-      "              '2. Accuracy: The submission states that a total of 15,000 jobs '\n",
-      "              'were created. This is the sum of the 11,000 from Ford and 4,000 '\n",
-      "              'from GM.\\n'\n",
-      "              '\\n'\n",
-      "              '3. Factualness: The reference provided states that 12,000 jobs '\n",
-      "              'were created due to the manufacturing of electric vehicles, '\n",
-      "              \"which contradicts the submission's claim of 15,000 jobs. \\n\"\n",
-      "              '\\n'\n",
-      "              'Based on this analysis, the submission fails to meet the '\n",
-      "              'factualness criterium, even though it is correct and accurate '\n",
-      "              'according to the information provided in the submission '\n",
-      "              'itself.\\n'\n",
-      "              '\\n'\n",
-      "              'N',\n",
-      " 'score': 0,\n",
-      " 'value': 'N'}\n"
+      "\n",
+      "** reasoning **\n",
+      "---\n",
+      "The criterion to assess is the correctness, accuracy, and factualness of the submission.\n",
+      "1. Correctness: The submission provides details about the number of jobs created due to the investment in electric vehicle manufacturing by Ford and GM. These details align with the input question.\n",
+      "2. Accuracy: The submission states that a total of 15,000 jobs were created. This is the sum of the 11,000 from Ford and 4,000 from GM.\n",
+      "3. Factualness: The reference provided states that 12,000 jobs were created due to the manufacturing of electric vehicles, which contradicts the submission's claim of 15,000 jobs. \n",
+      "Based on this analysis, the submission fails to meet the factualness criterium, even though it is correct and accurate according to the information provided in the submission itself.\n",
+      "N\n",
+      "\n",
+      "** score **\n",
+      "---\n",
+      "0\n",
+      "\n",
+      "** value **\n",
+      "---\n",
+      "N\n"
      ]
     }
    ],
@@ -841,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "1d83ed49",
    "metadata": {},
    "outputs": [],
@@ -878,7 +879,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
